feat: upd to core 4 + add arrival times and fix when there is no one

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,19 @@
 steps:
   - name: "gcr.io/trentiemeciel/poetry-builder"
     args: ["export", "--format", "requirements.txt", "--output", "requirements.txt", "--without-hashes"]
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'gsutil'
+    args:
+      - cp
+      - gs://env-config.30emeciel.fr/live.yaml
+      - env.yaml
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
     - functions
     - deploy
     - push-arrivals-and-departures
     - --project=trentiemeciel
+    - --env-vars-file=env.yaml
     - --source=.
     - --region=europe-west3
     - --entry-point=from_pubsub
