--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["Alyosha <alyosha@30emeciel.fr>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-firebase-admin = "^4.4.0"
-slack-sdk = "^3.2.1"
 python-box = "^5.3.0"
-core = { git = "https://github.com/30emeciel/py-core.git", branch="v1"}
+core = { git = "https://github.com/30emeciel/py-core.git", branch="4"}
 
 
 [tool.poetry.dev-dependencies]
 python-dotenv = "^0.17.0"
+pytest = "^6.2.4"
+pytest-mockito = "^0.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
